apis and minor changes
